--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+
 name: CI
 
 on:
@@ -22,11 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Check prettier formatting
-        run: npm run format
-
-      - name: Check for linting errors
-        run: npm run lint
+      - name: Check code formatting and linting with BiomeJS
+        run: npm run check:all
 
       - name: Check type errors
         run: npm run check
