feat: add commitlint configuration

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "type": "module",
   "devDependencies": {
     "@biomejs/biome": "2.2.3",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@tailwindcss/postcss": "^4.1.13",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
