--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx,json}": [
-      "biome check --write",
-      "biome format --write"
+      "biome check"
     ]
   }
 }
