--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "scripts": {
     "check": "tsc -p tsconfig.app.json && tsc -p tsconfig.node.json",
+    "check:all": "npm run lint && npm run check",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
